# tui-framework

./: .gitignore  Cargo.toml  Dockerfile  EASY_INSTALL.md  INSTALLATION.md  README.md  install-notcurses.sh
.cargo/: config.toml
.github/workflows/: build-notcurses.yml
.zencoder/rules/: repo.md
docs/: component-guide.md  getting-started.md  performance-guide.md  styling-guide.md
examples/: backend_test.rs  calculator.rs  counter.rs  css_test.rs  enhanced_macros_test.rs  hello_world.rs  list_demo.rs  macro_test.rs  menu_demo.rs  modal_demo.rs  progress_demo.rs  responsive_layout.rs  simple_list.rs  table_demo.rs  theme_test.rs  todo_app.rs
python-installer/: README.md  setup.py
python-installer/tui_framework_installer/: __init__.py  cli.py
src/: app.rs  component.rs  error.rs  lib.rs  prelude.rs  utils.rs
src/event/: handler.rs  mod.rs  types.rs
src/layout/: cache.rs  flexbox.rs  geometry.rs  layout_engine.rs  mod.rs
src/reactive/: context.rs  hooks.rs  mod.rs  state.rs
src/render/: backend.rs  batch.rs  context.rs  dirty_tracking.rs  mod.rs  optimized_renderer.rs  renderer.rs  vdom.rs
src/style/: animation.rs  color.rs  css.rs  enhanced_properties.rs  mod.rs  properties.rs  pseudo.rs  style_builder.rs  theme.rs
src/utils/: memory_pool.rs
src/widget/: button.rs  container.rs  div.rs  dropdown.rs  input.rs  list.rs  menu.rs  mod.rs  modal.rs  progress.rs  table.rs  text.rs  widget_trait.rs
tests/: integration_tests.rs  performance_tests.rs
tui-framework-macros/: Cargo.toml
tui-framework-macros/src/: lib.rs
