[package]
name = "tui-framework"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "A React-like TUI framework for Rust using libnotcurses"
license = "MIT OR Apache-2.0"
repository = "https://github.com/entrepeneur4lyf/tui-framework"
homepage = "https://github.com/entrepeneur4lyf/tui-framework"
documentation = "https://docs.rs/tui-framework"
readme = "README.md"
keywords = ["tui", "terminal", "ui", "react", "notcurses"]
categories = ["command-line-interface", "gui", "rendering"]

[dependencies]
# Core dependencies
libnotcurses-sys = { version = "3.11.0", optional = true }

tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Reactive system
parking_lot = "0.12"
slotmap = "1.0"
indexmap = "2.0"

# Styling and layout
cssparser = "0.31"
palette = "0.7"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
tracing = "0.1"
bitflags = "2.4"
tracing-subscriber = "0.3"

# Proc macros
tui-framework-macros = { path = "./tui-framework-macros" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"

[features]
default = ["std"]
std = []
# Enable libnotcurses backend
notcurses = ["libnotcurses-sys"]
# Enable experimental features
experimental = []
# Enable debugging features
debug = ["tracing/max_level_debug"]
libnotcurses-sys = ["dep:libnotcurses-sys"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "todo_app"
path = "examples/todo_app.rs"

[[example]]
name = "table_demo"
path = "examples/table_demo.rs"

[[example]]
name = "progress_demo"
path = "examples/progress_demo.rs"

[[example]]
name = "modal_demo"
path = "examples/modal_demo.rs"

[[example]]
name = "menu_demo"
path = "examples/menu_demo.rs"

[[example]]
name = "backend_test"
path = "examples/backend_test.rs"

[lib]
name = "tui_framework"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true

[workspace]
members = [
    ".",
    "tui-framework-macros",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
